--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <h1>just a web pwner</h1>
   <p class="subtitle">the bug bounty guy, vibe bug bountying and ...</p>
   <p class="handle">
-    madaraninja1337 &middot;
+    madaraninja1337
   </p>
   <nav>
     <a href="/">Home</a>
